--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -58,6 +58,12 @@ services:
     depends_on:
       analytics:
         condition: service_healthy
+     ports:
+      - ${KONG_HTTP_PORT}:8000/tcp
+      - ${KONG_HTTPS_PORT}:8443/tcp
+    expose:
+      - 8000
+      - 8443
     environment:
       KONG_DATABASE: "off"
       KONG_DECLARATIVE_CONFIG: /home/kong/kong.yml
