--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -59,8 +59,8 @@ services:
       analytics:
         condition: service_healthy
     ports:
-      - 8000:8000
-      - 8443:8443
+      - ${KONG_HTTP_PORT}:8000/tcp
+      - ${KONG_HTTPS_PORT}:8443/tcp
     expose:
       - 8000
       - 8443
